fixed the off center none avatar in ppl cf with a margin right 5px and no margin left

--- a/jsx_refactor/client/automation-finder/src/components/ConditionCards/style.css
+++ b/jsx_refactor/client/automation-finder/src/components/ConditionCards/style.css
@@ -69,3 +69,7 @@ img, svg {
 .manual-progress {
     width: 100%;
 }
+
+.dynamic-none {
+    margin: 0px 5px 0px !important;
+}
